[package]
name = "dome-seing_lsq-fit"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
nalgebra = "0.26.2"
ndarray = "0.15.2"
ndarray-npy = "0.8.0"
num_cpus = "1.13.0"
